k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tpfoyer-app
  namespace: tpfoyer
spec:
  type: ClusterIP
  selector:
    app: tpfoyer-app
  ports:
    - port: 8089
      targetPort: 8089
